# Stock-Analysis-MCP-Server

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
src/stock_mcp/: server.py  tools.py
