[project]
name = "stock-mcp"
version = "0.1.0"
description = "MCP server to get quote, fundamentals, news and analyse about any stock"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.2",
    "yfinance>=0.2.61",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
stock-mcp = "stock_mcp:main"

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 100